Add slug-driven video quiz template and JSON-backed rendering

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           corrigeant vos erreurs.
         </p>
         <a class="button-link" href="./v/test.html">Ouvrir le test démo</a>
+        <a class="button-link" href="./v/video.html?slug=test">Ouvrir le quiz vidéo générique (slug=test)</a>
       </section>
     </main>
   </body>
