--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <a class="button-link" href="./v/test.html">Ouvrir le test démo</a>
         <a class="button-link" href="./v/video.html?slug=test">Ouvrir le quiz vidéo générique (slug=test)</a>
       </section>
+
+      <section aria-labelledby="json-title" class="card">
+        <h2 id="json-title">Liste des fichiers JSON disponibles</h2>
+        <ul>
+          <li><a href="./data/test.json">test.json</a></li>
+          <li><a href="./data/BPZBAFKD7pI.json">BPZBAFKD7pI.json</a></li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
