Refondre l'index des quiz et unifier le format des questions

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
           corrigeant vos erreurs.
         </p>
         <a class="button-link" href="./v/test.html">Ouvrir le test démo</a>
-        <a class="button-link" href="./v/video.html?slug=test">Ouvrir le quiz vidéo générique (slug=test)</a>
       </section>
 
-      <section aria-labelledby="json-title" class="card">
-        <h2 id="json-title">Liste des fichiers JSON disponibles</h2>
-        <ul>
-          <li><a href="./data/test.json">test.json</a></li>
-          <li><a href="./data/BPZBAFKD7pI.json">BPZBAFKD7pI.json</a></li>
+      <section aria-labelledby="quiz-list-title" class="card">
+        <h2 id="quiz-list-title">Quiz disponibles</h2>
+        <p>Chaque lien ouvre une page de quiz (plus de liens directs vers les fichiers JSON).</p>
+        <ul data-quiz-list>
+          <li>Chargement de la liste…</li>
         </ul>
       </section>
     </main>
+
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
